--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,17 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
+        maven { url = 'https://plugins.gradle.org/m2'}
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'com.wynprice.cursemaven', name: 'CurseMaven', version: '2.1.4'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
+apply plugin: 'com.wynprice.cursemaven'
 
 version = '1.0.16a-mc1.16'
 group = 'com.supermartijn642.packedup' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -88,6 +91,8 @@ dependencies {
 //    runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2")
 
     // Curios
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0-beta2")
-    compileOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0-beta2:api")
+    runtimeOnly fg.deobf("curse.maven:curios:3031837")
+    compileOnly fg.deobf("curse.maven:curios:3031839")
+//    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:forge-1.16.2-4.0.0.0")
+//    compileOnly fg.deobf("top.theillusivec4.curios:curios:forge-1.16.2-4.0.0.0:api")
 }
