--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -48,6 +48,6 @@ description='''Packed Up allows you to pack up all your things into new amazing 
 [[dependencies.packedup]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16,)"
+    versionRange="[1.16,1.16.2)"
     ordering="NONE"
     side="BOTH"
