--- a/build.gradle
+++ b/build.gradle
@@ -71,28 +71,19 @@ minecraft {
 
 repositories {
     maven {
-        // location of the maven that hosts JEI files
-        name = "Progwml6 maven"
-        url = "https://dvs1.progwml6.com/files/maven/"
-    }
-    maven {
-        // location of a maven mirror for JEI files, as a fallback
-        name = "ModMaven"
-        url = "https://modmaven.k-4u.nl"
+        url "https://www.cursemaven.com"
     }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.2-33.0.61'
 
-    // compile against the JEI API but do not include it at runtime
-//    compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2:api")
-    // at runtime, use the full JEI jar
-//    runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2")
+    // Core lib
+    compile fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3351871')
+    // Config lib
+    compile fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3357667')
 
     // Curios
     runtimeOnly fg.deobf("curse.maven:curios:3042479")
     compileOnly fg.deobf("curse.maven:curios:3042479")
-//    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:forge-1.16.2-4.0.0.0")
-//    compileOnly fg.deobf("top.theillusivec4.curios:curios:forge-1.16.2-4.0.0.0:api")
 }
