--- a/build.gradle
+++ b/build.gradle
@@ -90,4 +90,7 @@ dependencies {
 
     // Curios
     compile fg.deobf('curse.maven:curios-309927:3343065')
+
+    // Just Enough Items
+    runtimeOnly fg.deobf('curse.maven:jei-238222:3345971')
 }
