--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,6 @@ dependencies {
     compile fg.deobf('curse.maven:baubles-227083:2518667')
 }
 
-sourceSets {
-    main { output.resourcesDir = output.classesDir }
-}
+//sourceSets {
+//    main { output.resourcesDir = output.classesDir }
+//}
