--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -51,3 +51,17 @@ description='''Packed Up allows you to pack up all your things into new amazing 
     versionRange="[1.16.2,1.16.3)"
     ordering="NONE"
     side="BOTH"
+# Here's another dependency
+[[dependencies.packedup]]
+    modId="supermartijn642corelib"
+    mandatory=true
+    versionRange="[1.0.8,1.1.0)"
+    ordering="NONE"
+    side="BOTH"
+# Here's another dependency
+[[dependencies.packedup]]
+    modId="supermartijn642configlib"
+    mandatory=true
+    versionRange="[1.0.8,1.1.0)"
+    ordering="NONE"
+    side="BOTH"
