--- a/build.gradle
+++ b/build.gradle
@@ -75,14 +75,17 @@ repositories {
     maven {
         url "https://www.cursemaven.com"
     }
+    flatDir {
+        dir 'lib'
+    }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.17.1-37.0.1'
 
     // Core lib
-    compileOnly fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3397774')
-    runtimeOnly fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3397774')
+    compileOnly fg.deobf('com.supermartijn642.core:supermartijn642corelib-1.0.10a:mc1.17')//fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3398450')
+    runtimeOnly fg.deobf('com.supermartijn642.core:supermartijn642corelib-1.0.10a:mc1.17')//fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3398450')
     // Config lib
     compileOnly fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3397561')
     runtimeOnly fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3397561')
@@ -90,7 +93,7 @@ dependencies {
     // Curios
     compileOnly fg.deobf('curse.maven:curios-309927:3343065')
 
-//    implementation('cpw.mods:securejarhandler') { version { strictly '0.9.45' } }
+    implementation('cpw.mods:securejarhandler') { version { strictly '0.9.45' } }
 
     // Just Enough Items
 //    runtimeOnly fg.deobf('curse.maven:jei-238222:3345971')
