Uncomment Curios stuff

--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,5 @@ dependencies {
 //    runtimeOnly fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3397561')
 
     // Curios
-    compileOnly fg.deobf('curse.maven:curios-309927:3343065')
-
-    // Just Enough Items
-//    runtimeOnly fg.deobf('curse.maven:jei-238222:3345971')
+    implementation fg.deobf('curse.maven:curios-309927:3412602')
 }
