--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.9+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.16+', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-version = '1.0.23-mc1.17'
+version = '1.0.23a-mc1.17'
 group = 'com.supermartijn642.packedup' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'packedup'
 
@@ -81,14 +81,12 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.17.1-37.0.7'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.25'
 
     // Core lib
-    compileOnly fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3398450')
-//    runtimeOnly fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3398450')
+    implementation fg.deobf('curse.maven:supermartijn642s-core-lib-454372:3407572')
     // Config lib
-    compileOnly fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3397561')
-//    runtimeOnly fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3397561')
+    implementation fg.deobf('curse.maven:supermartijn642s-config-lib-438332:3397561')
 
     // Curios
     implementation fg.deobf('curse.maven:curios-309927:3412602')
