Replace template values in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,16 +20,16 @@ mixin_package=mixin
 mixin_compatibility_level=JAVA_17
 
 # Mod properties
-mod_name=Forge Mod Template
-mod_description=A template for a Forge mod
-mod_id=forgetemplate
-mod_version=1.0.0
+mod_name=Packed Up
+mod_description=Packed Up allows you to pack up all your things into new amazing Backpacks!
+mod_id=packedup
+mod_version=1.0.25
 mod_license=All rights reserved
-mod_page=https://www.curseforge.com/members/supermartijn642/projects
-mod_sources=https://github.com/SuperMartijn642
-mod_issues=https://github.com/SuperMartijn642/Entangled/issues
-mod_package=com.supermartijn642.fabrictemplate
-mod_main_class=FabricModTemplate
+mod_page=https://www.curseforge.com/minecraft/mc-mods/packed-up-backpacks
+mod_sources=https://github.com/SuperMartijn642/PackedUp
+mod_issues=https://github.com/SuperMartijn642/PackedUp/issues
+mod_package=com.supermartijn642.packedup
+mod_main_class=PackedUp
 maven_group=com.supermartijn642
 
 # Dependencies
