--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,9 @@ java_dependency=>=17
 resource_pack_format=9
 
 # Forge
-forge_version=41.0.38
-forge_dependency=[41,)
+forge_version=41.0.87
+forge_dependency=[41.0.87,)
+javafml_dependency=[41,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -33,11 +34,11 @@ mod_main_class=PackedUp
 maven_group=com.supermartijn642
 
 # Dependencies
-core_library_file=3821432
-core_library_dependency=[1.0.18,1.1.0)
-config_library_file=3821705
-config_library_dependency=[1.1.0,)
-curios_file=3841962
+core_library_file=3863130
+core_library_dependency=[1.0.19,1.1.0)
+config_library_file=3866900
+config_library_dependency=[1.1.6,)
+curios_file=3867099
 
 # Runtime mods
 just_enough_items_file=3835406
