--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.19.2
-minecraft_dependency=[1.19,1.20)
+minecraft_dependency=[1.19,1.19.3)
 minecraft_suffix=mc1.19
 java_target=17
 java_dependency=>=17
@@ -24,7 +24,7 @@ mixin_compatibility_level=JAVA_17
 mod_name=Packed Up
 mod_description=Packed Up allows you to pack up all your things into new amazing Backpacks!
 mod_id=packedup
-mod_version=1.0.26b
+mod_version=1.0.27
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/packed-up-backpacks
 mod_sources=https://github.com/SuperMartijn642/PackedUp
