--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,17 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.18.2
-minecraft_dependency=[1.18,1.19)
+minecraft_dependency=1.18.x
 minecraft_suffix=mc1.18
 java_target=17
 java_dependency=>=17
 resource_pack_format=9
 
-# Forge
-forge_version=40.1.0
-forge_dependency=[38,)
-javafml_dependency=[38,)
+# Fabric
+fabric_loader_version=0.14.15
+fabric_loader_dependency=>=0.14.0
+fabric_api_version=0.67.0+1.18.2
+fabric_api_dependency=*
 
 # Mixin
 mixin_minimum_version=0.8
@@ -31,6 +32,7 @@ mod_sources=https://github.com/SuperMartijn642/PackedUp
 mod_issues=https://github.com/SuperMartijn642/PackedUp/issues
 mod_package=com.supermartijn642.packedup
 mod_main_class=PackedUp
+mod_client_class=PackedUpClient
 maven_group=com.supermartijn642
 
 # CurseForge
@@ -38,21 +40,23 @@ curseforge_project_id=361867
 curseforge_release_type=release
 curseforge_game_versions=1.18 1.18.1 1.18.2
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
-curseforge_optional_dependency_ids=curios
+curseforge_optional_dependency_ids=trinkets
 
 # Modrinth
 modrinth_project_id=packed-up-backpacks
 modrinth_release_type=release
 modrinth_game_versions=1.18 1.18.1 1.18.2
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
-modrinth_optional_dependency_ids=
+modrinth_optional_dependency_ids=trinkets
 
 # Dependencies
 core_library_file=3649270
-core_library_dependency=[1.1.0,1.2.0)
+core_library_dependency=>=1.1.0 <1.2.0
 config_library_file=3862966
-config_library_dependency=[1.1.6,)
-curios_file=3841948
+config_library_dependency=>=1.1.0
+trinkets_file=3786685
+cardinal_components_base_file=3856671
+cardinal_components_entity_file=3856674
 
 # Runtime mods
-just_enough_items_file=3758750
+just_enough_items_file=4352924
