--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.18.2
-minecraft_dependency=1.18.x
-minecraft_suffix=mc1.18
+minecraft_version=1.19.2
+minecraft_dependency=>=1.19.2 <1.19.3
+minecraft_suffix=mc1.19.2
 java_target=17
 java_dependency=>=17
 resource_pack_format=9
@@ -13,7 +13,7 @@ resource_pack_format=9
 # Fabric
 fabric_loader_version=0.14.19
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.76.0+1.18.2
+fabric_api_version=0.76.0+1.19.2
 fabric_api_dependency=*
 
 # Mixin
@@ -38,25 +38,25 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=361867
 curseforge_release_type=release
-curseforge_game_versions=1.18 1.18.1 1.18.2
+curseforge_game_versions=1.19.2
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=trinkets
 
 # Modrinth
 modrinth_project_id=packed-up-backpacks
 modrinth_release_type=release
-modrinth_game_versions=1.18 1.18.1 1.18.2
+modrinth_game_versions=1.19.2
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=trinkets
 
 # Dependencies
-core_library_file=3649270
+core_library_file=4543669
 core_library_dependency=>=1.1.0 <1.2.0
-config_library_file=3862966
+config_library_file=4494784
 config_library_dependency=>=1.1.0
-trinkets_file=3786685
-cardinal_components_base_file=3856671
-cardinal_components_entity_file=3856674
+trinkets_file=4343755
+cardinal_components_base_file=3954770
+cardinal_components_entity_file=3954773
 
 # Runtime mods
-just_enough_items_file=4352924
+just_enough_items_file=4494409
