--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.19.4
-minecraft_dependency=>=1.19.4 <=1.20
-minecraft_suffix=mc1.19.4
+minecraft_version=1.20
+minecraft_dependency=>=1.20 <1.21
+minecraft_suffix=mc1.20
 java_target=17
 java_dependency=>=17
 resource_pack_format=12
 
 # Fabric
-fabric_loader_version=0.14.19
+fabric_loader_version=0.14.21
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.78.0+1.19.4
+fabric_api_version=0.83.0+1.20
 fabric_api_dependency=*
 
 # Mixin
@@ -25,7 +25,7 @@ mixin_compatibility_level=JAVA_17
 mod_name=Packed Up
 mod_description=Packed Up allows you to pack up all your things into new amazing Backpacks!
 mod_id=packedup
-mod_version=1.0.28b
+mod_version=1.0.28
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/packed-up-backpacks
 mod_sources=https://github.com/SuperMartijn642/PackedUp
@@ -38,14 +38,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=361867
 curseforge_release_type=release
-curseforge_game_versions=1.19.4
+curseforge_game_versions=1.20
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=trinkets
 
 # Modrinth
 modrinth_project_id=packed-up-backpacks
 modrinth_release_type=release
-modrinth_game_versions=1.19.4
+modrinth_game_versions=1.20
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=trinkets
 
