--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.2
-minecraft_dependency=[1.20.2,1.21)
-minecraft_suffix=mc1.20.2
+minecraft_version=1.20.4
+minecraft_dependency=[1.20.3,1.21)
+minecraft_suffix=mc1.20.4
 java_target=17
 java_dependency=>=17
-resource_pack_format=18
+resource_pack_format=22
 
-# Forge
-forge_version=48.0.1
-forge_dependency=[48,)
-javafml_dependency=[48,)
+# NeoForge
+neoforge_version=20.4.43-beta
+neoforge_dependency=[20.3,)
+javafml_dependency=[1,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -36,23 +36,23 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=361867
 curseforge_release_type=release
-curseforge_game_versions=1.20.2
+curseforge_game_versions=1.20.3 1.20.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=curios
 
 # Modrinth
 modrinth_project_id=packed-up-backpacks
 modrinth_release_type=release
-modrinth_game_versions=1.20.2
+modrinth_game_versions=1.20.3 1.20.4
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
-modrinth_optional_dependency_ids=
+modrinth_optional_dependency_ids=curios
 
 # Dependencies
-core_library_file=4762386
+core_library_file=4968742
 core_library_dependency=[1.1.0,1.2.0)
-config_library_file=4762437
-config_library_dependency=[1.1.6,)
-curios_file=4478589
+config_library_file=4971552
+config_library_dependency=[1.1.0,)
+curios_file=4960347
 
 # Runtime mods
 just_enough_items_file=4473386
