--- a/gradle.properties
+++ b/gradle.properties
@@ -33,24 +33,20 @@ mod_package=com.supermartijn642.packedup
 mod_main_class=PackedUp
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.15 1.15.1 1.15.2
 curseforge_project_id=361867
-curseforge_release_type=release
-curseforge_game_versions=1.15 1.15.1 1.15.2
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=curios
-
-# Modrinth
-modrinth_project_id=packed-up-backpacks
-modrinth_release_type=release
-modrinth_game_versions=1.15 1.15.1 1.15.2
+modrinth_project_id=ZbFzEauY
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=3596461
-core_library_dependency=[1.1.0,1.2.0)
-config_library_file=3862962
+core_library_file=5102770
+core_library_dependency=[1.1.17,1.2.0)
+config_library_file=4715398
 config_library_dependency=[1.1.6,)
 curios_file=3168991
 
