--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.19.3
-minecraft_dependency=[1.19.3,1.20)
+minecraft_dependency=[1.19.3,1.19.4)
 minecraft_suffix=mc1.19.3
 java_target=17
 java_dependency=>=17
-resource_pack_format=9
+resource_pack_format=12
 
 # Forge
-forge_version=44.1.0
+forge_version=44.1.23
 forge_dependency=[44.1,)
 javafml_dependency=[44,)
 
@@ -33,26 +33,22 @@ mod_package=com.supermartijn642.packedup
 mod_main_class=PackedUp
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.19.3
 curseforge_project_id=361867
-curseforge_release_type=release
-curseforge_game_versions=1.19.3
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=curios
-
-# Modrinth
-modrinth_project_id=packed-up-backpacks
-modrinth_release_type=release
-modrinth_game_versions=1.19.3
+modrinth_project_id=ZbFzEauY
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=3863130
-core_library_dependency=[1.1.0,1.2.0)
-config_library_file=3871792
+core_library_file=5102256
+core_library_dependency=[1.1.17,1.2.0)
+config_library_file=4715406
 config_library_dependency=[1.1.6,)
-curios_file=4325469
+curios_file=4440173
 
 # Runtime mods
 just_enough_items_file=4362072
