--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20
-minecraft_dependency=[1.20,1.21)
-minecraft_suffix=mc1.20
+minecraft_version=1.20.1
+minecraft_dependency=[1.20,1.20.2)
+minecraft_suffix=mc1.20.1
 java_target=17
 java_dependency=>=17
-resource_pack_format=12
+resource_pack_format=15
 
 # Forge
-forge_version=46.0.1
+forge_version=47.3.5
 forge_dependency=[46,)
 javafml_dependency=[46,)
 
@@ -33,26 +33,22 @@ mod_package=com.supermartijn642.packedup
 mod_main_class=PackedUp
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.20 1.20.1
 curseforge_project_id=361867
-curseforge_release_type=release
-curseforge_game_versions=1.20
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=curios
-
-# Modrinth
-modrinth_project_id=packed-up-backpacks
-modrinth_release_type=release
-modrinth_game_versions=1.20
+modrinth_project_id=ZbFzEauY
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=4484241
-core_library_dependency=[1.1.0,1.2.0)
-config_library_file=3871792
+core_library_file=5102258
+core_library_dependency=[1.1.17,1.2.0)
+config_library_file=4715408
 config_library_dependency=[1.1.6,)
-curios_file=4478589
+curios_file=5367944
 
 # Runtime mods
 just_enough_items_file=4473386
