--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.20.2
-minecraft_dependency=[1.20.2,1.21)
+minecraft_dependency=[1.20.2,1.20.3)
 minecraft_suffix=mc1.20.2
 java_target=17
 java_dependency=>=17
 resource_pack_format=18
 
 # Forge
-forge_version=48.0.1
+forge_version=48.1.0
 forge_dependency=[48,)
 javafml_dependency=[48,)
 
@@ -33,26 +33,22 @@ mod_package=com.supermartijn642.packedup
 mod_main_class=PackedUp
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.20.2
 curseforge_project_id=361867
-curseforge_release_type=release
-curseforge_game_versions=1.20.2
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=curios
-
-# Modrinth
-modrinth_project_id=packed-up-backpacks
-modrinth_release_type=release
-modrinth_game_versions=1.20.2
+modrinth_project_id=ZbFzEauY
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=4762386
-core_library_dependency=[1.1.0,1.2.0)
+core_library_file=5102262
+core_library_dependency=[1.1.17,1.2.0)
 config_library_file=4762437
 config_library_dependency=[1.1.6,)
-curios_file=4478589
+curios_file=4921741
 
 # Runtime mods
 just_enough_items_file=4473386
