--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,18 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.6
-minecraft_dependency=>=1.20.5 <1.21
-minecraft_suffix=mc1.20.6
+minecraft_version=1.21
+minecraft_dependency=>=1.21 <1.22
+minecraft_suffix=mc1.21
 java_target=21
 java_dependency=>=21
-resource_pack_format=32
+resource_pack_format=34
 
 # Fabric
 fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.100.4+1.20.6
-fabric_api_dependency=*
+fabric_api_version=0.100.7+1.21
+fabric_api_dependency=>=0.100.7
 
 # Mixin
 mixin_minimum_version=0.8
@@ -37,7 +37,7 @@ maven_group=com.supermartijn642
 
 # Publishing
 publishing_release_type=stable
-publishing_game_versions=1.20.5 1.20.6
+publishing_game_versions=1.21
 curseforge_project_id=361867
 curseforge_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=trinkets
@@ -50,7 +50,7 @@ core_library_file=5293368
 core_library_dependency=>=1.1.17 <1.2.0
 config_library_file=4785841
 config_library_dependency=>=1.1.6
-trinkets_file=5374304
+trinkets_file=5534317
 cardinal_components_base_file=5393501
 cardinal_components_entity_file=4160620
 
