--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,3 @@
 public net.minecraft.world.item.crafting.ShapedRecipe pattern
+public net.minecraft.world.item.crafting.ShapedRecipe$Serializer fromNetwork(Lnet/minecraft/network/RegistryFriendlyByteBuf;)Lnet/minecraft/world/item/crafting/ShapedRecipe;
+public net.minecraft.world.item.crafting.ShapedRecipe$Serializer toNetwork(Lnet/minecraft/network/RegistryFriendlyByteBuf;Lnet/minecraft/world/item/crafting/ShapedRecipe;)V
