--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,3 @@
 public net.minecraft.world.item.crafting.ShapedRecipe f_302516_ # pattern
+public net.minecraft.world.item.crafting.ShapedRecipe$Serializer m_44238_(Lnet/minecraft/network/RegistryFriendlyByteBuf;)Lnet/minecraft/world/item/crafting/ShapedRecipe; # fromNetwork
+public net.minecraft.world.item.crafting.ShapedRecipe$Serializer m_44223_(Lnet/minecraft/network/RegistryFriendlyByteBuf;Lnet/minecraft/world/item/crafting/ShapedRecipe;)V # toNetwork
