--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ mixin_compatibility_level=JAVA_8
 mod_name=Packed Up
 mod_description=Packed Up allows you to pack up all your things into new amazing Backpacks!
 mod_id=packedup
-mod_version=1.0.30
+mod_version=1.0.30a
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/packed-up-backpacks
 mod_sources=https://github.com/SuperMartijn642/PackedUp
