Disable MixinGradle's annotation processor check

--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,11 @@ tasks.configureEach {
         it.dependsOn "prepareDataResources"
 }
 
+// MixinGradle Settings
+mixin {
+    disableAnnotationProcessorCheck()
+}
+
 publishMods {
     file = jar.archiveFile
     displayName = "${mod_name} ${mod_version} for Forge ${minecraft_suffix.substring(2)}"
