Force build jar to be reobfuscated

--- a/build.gradle
+++ b/build.gradle
@@ -153,6 +153,9 @@ mixin {
     disableAnnotationProcessorCheck()
 }
 
+// Force the jar to be reobfuscated
+jar.finalizedBy('reobfJar')
+
 publishMods {
     file = jar.archiveFile
     displayName = "${mod_name} ${mod_version} for Forge ${minecraft_suffix.substring(2)}"
