--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.21
+minecraft_version=1.21.1
 minecraft_dependency=>=1.21 <1.22
 minecraft_suffix=mc1.21
 java_target=21
@@ -11,9 +11,9 @@ java_dependency=>=21
 resource_pack_format=34
 
 # Fabric
-fabric_loader_version=0.15.11
+fabric_loader_version=0.16.5
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.100.7+1.21
+fabric_api_version=0.104.0+1.21.1
 fabric_api_dependency=>=0.100.7
 
 # Mixin
@@ -37,7 +37,7 @@ maven_group=com.supermartijn642
 
 # Publishing
 publishing_release_type=stable
-publishing_game_versions=1.21
+publishing_game_versions=1.21 1.21.1
 curseforge_project_id=361867
 curseforge_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=trinkets
@@ -46,13 +46,13 @@ modrinth_required_dependency_ids=fabric-api supermartijn642s-core-lib supermarti
 modrinth_optional_dependency_ids=trinkets
 
 # Dependencies
-core_library_file=5293368
+core_library_file=5713667
 core_library_dependency=>=1.1.17 <1.2.0
-config_library_file=4785841
+config_library_file=5546988
 config_library_dependency=>=1.1.6
 trinkets_file=5534317
 cardinal_components_base_file=5393501
 cardinal_components_entity_file=4160620
 
 # Runtime mods
-just_enough_items_file=4473385
+just_enough_items_file=5718397
